syntax = "proto3";
option go_package = "./mygrpc";
package myservice;
import "google/protobuf/empty.proto";

service MyService {
    rpc Authenticate(AuthRequest) returns (google.protobuf.Empty) {}
    rpc PressKey(KeyRequest) returns (google.protobuf.Empty) {}
    rpc Click(KeyRequest) returns (google.protobuf.Empty) {}
    rpc ReleaseKey(KeyRequest) returns (google.protobuf.Empty) {}
    rpc MouseClick(MouseRequest) returns (google.protobuf.Empty) {}
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    bool success = 1;
    string token = 2;
}

message KeyRequest {
    string key = 1;
    string token = 2;
}


message MouseRequest {
    int64 x = 1;
    int64 y = 2;
    string clicktype = 3; // tpye
    float zoom_rate = 4; //屏幕缩放率
}


message KeyResponse {
    bool success = 1;
    string token = 2;
    string key = 3;
}
